# retell_ai_call_analysis

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  run.sh
retell_ai_call_analysis/: run.py  utils.py
retell_ai_call_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
retell_ai_call_analysis/clients/: __init__.py  db_call_analysis_client.py  db_client.py  make_dot_com_client.py  openai_client.py  retell_client.py  telegram_client.py
retell_ai_call_analysis/db/: db_model.py  setup_database.py
retell_ai_call_analysis/model/call_analysis/: __init__.py  call_analysis_result.py
retell_ai_call_analysis/model/prompts/: __init__.py  call_analysis_prompt.py
retell_ai_call_analysis/model/retell/: retell_call.py
